fix: wrong font paths

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -4,9 +4,9 @@
     font-style: normal;
     font-weight: 400;
     src: local(''),
-        url('../fonts/dm-sans-v11-latin-regular.woff2') format('woff2'),
+        url('/fonts/dm-sans-v11-latin-regular.woff2') format('woff2'),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/dm-sans-v11-latin-regular.woff') format('woff');
+        url('/fonts/dm-sans-v11-latin-regular.woff') format('woff');
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -16,9 +16,9 @@
     font-style: italic;
     font-weight: 400;
     src: local(''),
-        url('../fonts/dm-sans-v11-latin-italic.woff2') format('woff2'),
+        url('/fonts/dm-sans-v11-latin-italic.woff2') format('woff2'),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/dm-sans-v11-latin-italic.woff') format('woff');
+        url('/fonts/dm-sans-v11-latin-italic.woff') format('woff');
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -28,9 +28,9 @@
     font-style: normal;
     font-weight: 500;
     src: local(''),
-        url('../fonts/dm-sans-v11-latin-500.woff2') format('woff2'),
+        url('/fonts/dm-sans-v11-latin-500.woff2') format('woff2'),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/dm-sans-v11-latin-500.woff') format('woff');
+        url('/fonts/dm-sans-v11-latin-500.woff') format('woff');
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -40,9 +40,9 @@
     font-style: normal;
     font-weight: 700;
     src: local(''),
-        url('../fonts/dm-sans-v11-latin-700.woff2') format('woff2'),
+        url('/fonts/dm-sans-v11-latin-700.woff2') format('woff2'),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/dm-sans-v11-latin-700.woff') format('woff');
+        url('/fonts/dm-sans-v11-latin-700.woff') format('woff');
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -52,9 +52,9 @@
     font-style: italic;
     font-weight: 500;
     src: local(''),
-        url('../fonts/dm-sans-v11-latin-500italic.woff2') format('woff2'),
+        url('/fonts/dm-sans-v11-latin-500italic.woff2') format('woff2'),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/dm-sans-v11-latin-500italic.woff') format('woff');
+        url('/fonts/dm-sans-v11-latin-500italic.woff') format('woff');
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -64,9 +64,9 @@
     font-style: italic;
     font-weight: 700;
     src: local(''),
-        url('../fonts/dm-sans-v11-latin-700italic.woff2') format('woff2'),
+        url('/fonts/dm-sans-v11-latin-700italic.woff2') format('woff2'),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/dm-sans-v11-latin-700italic.woff') format('woff');
+        url('/fonts/dm-sans-v11-latin-700italic.woff') format('woff');
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -76,9 +76,9 @@
     font-style: normal;
     font-weight: 400;
     src: local(''),
-        url('../fonts/spline-sans-v8-latin-regular.woff2') format('woff2'),
+        url('/fonts/spline-sans-v8-latin-regular.woff2') format('woff2'),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/spline-sans-v8-latin-regular.woff') format('woff');
+        url('/fonts/spline-sans-v8-latin-regular.woff') format('woff');
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -88,9 +88,9 @@
     font-style: normal;
     font-weight: 500;
     src: local(''),
-        url('../fonts/spline-sans-v8-latin-500.woff2') format('woff2'),
+        url('/fonts/spline-sans-v8-latin-500.woff2') format('woff2'),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/spline-sans-v8-latin-500.woff') format('woff');
+        url('/fonts/spline-sans-v8-latin-500.woff') format('woff');
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -100,9 +100,9 @@
     font-style: normal;
     font-weight: 600;
     src: local(''),
-        url('../fonts/spline-sans-v8-latin-600.woff2') format('woff2'),
+        url('/fonts/spline-sans-v8-latin-600.woff2') format('woff2'),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/spline-sans-v8-latin-600.woff') format('woff');
+        url('/fonts/spline-sans-v8-latin-600.woff') format('woff');
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -112,8 +112,8 @@
     font-style: normal;
     font-weight: 700;
     src: local(''),
-        url('../fonts/spline-sans-v8-latin-700.woff2') format('woff2'),
+        url('/fonts/spline-sans-v8-latin-700.woff2') format('woff2'),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/spline-sans-v8-latin-700.woff') format('woff');
+        url('/fonts/spline-sans-v8-latin-700.woff') format('woff');
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
